--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,124 @@
-flask==2.3.3
-requests==2.31.0
-python-dotenv==1.0.0
+apturl==0.5.2
+asgiref==3.9.1
+attrs==21.2.0
+bcrypt==4.1.2
+beautifulsoup4==4.14.2
+blinker==1.9.0
+Brlapi==0.8.3
+certifi==2025.8.3
+cffi==2.0.0
+chardet==4.0.0
+charset-normalizer==3.4.2
+click==8.3.0
+colorama==0.4.4
+command-not-found==0.3
+coverage==7.10.1
+crispy-bootstrap5==2025.6
+cryptography==3.4.8
+cupshelpers==1.0
+curl_cffi==0.13.0
+dbus-python==1.2.18
+defer==1.0.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+dj-database-url==2.1.0
+Django==4.2.7
+django-cors-headers==4.3.1
+django-crispy-forms==2.4
+django-debug-toolbar==4.2.0
+django-elasticsearch-dsl-drf==0.22.5
+django-filter==23.5
+django-nine==0.2.7
+djangorestframework==3.14.0
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+duplicity==0.8.21
+elastic-transport==8.17.1
+elasticsearch==8.13.0
+elasticsearch-dsl==8.11.0
+fasteners==0.14.1
+Flask==2.3.3
+flask-cors==6.0.1
+frozendict==2.4.6
+future==0.18.2
+git-filter-repo==2.34.0
 gunicorn==21.2.0
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+itsdangerous==2.2.0
+jeepney==0.7.1
+Jinja2==3.1.6
+jsonschema==3.2.0
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+MarkupSafe==3.0.3
+monotonic==1.6
+more-itertools==8.10.0
+multitasking==0.0.12
+mysqlclient==2.2.0
+netifaces==0.11.0
+numpy==2.2.6
+oauthlib==3.2.0
+olefile==0.46
+packaging==25.0
+pandas==2.3.3
+paramiko==2.9.3
+peewee==3.18.2
+pexpect==4.8.0
+Pillow==10.1.0
+platformdirs==4.4.0
+protobuf==6.32.1
+ptyprocess==0.7.0
+pycairo==1.20.1
+pycparser==2.23
+pycups==2.0.1
+PyGObject==3.42.1
+PyJWT==2.8.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+pyrsistent==0.18.1
+python-apt==2.4.0+ubuntu4
+python-dateutil==2.9.0.post0
+python-debian==0.1.43+ubuntu1.1
+python-decouple==3.8
+python-dotenv==1.0.0
+pytz==2025.2
+pyxdg==0.27
+PyYAML==5.4.1
+reportlab==3.6.8
+requests==2.31.0
+SecretStorage==3.3.1
+six==1.16.0
+soupsieve==2.8
+sqlparse==0.5.3
+systemd-python==234
+texttable==1.6.4
+typing_extensions==4.14.1
+tzdata==2025.2
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+usb-creator==0.3.7
+wadllib==1.3.6
+websocket-client==1.2.3
+websockets==15.0.1
+Werkzeug==3.1.3
+whitenoise==6.6.0
+xdg==5
+xkit==0.0.0
+yfinance==0.2.66
+zipp==1.0.0
